JS Strings Complete

--- a/Javascript/07-Strings/01-ReverseString.html
+++ b/Javascript/07-Strings/01-ReverseString.html
@@ -45,7 +45,7 @@
         }
     </script>
     <p style="font-size:12px;">
-        // 01. Write a JavaScript function reverses string and returns itExample: "sample"  "elpmas".
+        // 01. Write a JavaScript function reverses string and returns itExample: "sample" -> "elpmas".
     </p>
 </body>
 </html>
