--- a/Javascript/07-Strings/02-BracketChecker.html
+++ b/Javascript/07-Strings/02-BracketChecker.html
@@ -61,7 +61,9 @@
         }
     </script>
     <p style="font-size:12px;">
-        // 
+        // 02. Write a JavaScript function to check if in a given expression the brackets are put correctly.<br />
+Example of correct expression: ((a+b)/5-d).<br />
+Example of incorrect expression: )(a+b)).
     </p>
 </body>
 </html>
