--- a/Javascript/07-Strings/03-SubstringCount.html
+++ b/Javascript/07-Strings/03-SubstringCount.html
@@ -50,7 +50,7 @@
         }
     </script>
     <p style="font-size:12px;">
-        // 
+        // 03. Write a JavaScript function that finds how many times a substring is contained in a given text (perform case insensitive search).
     </p>
 </body>
 </html>
