--- a/Javascript/07-Strings/04-UpCaseLowerCase.html
+++ b/Javascript/07-Strings/04-UpCaseLowerCase.html
@@ -61,7 +61,11 @@
         }
     </script>
     <p style="font-size:12px;">
-        // 
+        // 04 You are given a text. Write a function that changes the text in all regions:<br />
+&lt;upcase>text&lt;/upcase&gt; to uppercase.<br />
+&lt;lowcase>text&lt;/lowcase&gt; to lowercase<br />
+&lt;mixcase>text&lt;/mixcase&gt; to mix casing(random)
+
     </p>
 </body>
 </html>
