--- a/Javascript/07-Strings/06-ExtractText.html
+++ b/Javascript/07-Strings/06-ExtractText.html
@@ -42,7 +42,8 @@
         }
     </script>
     <p style="font-size:12px;">
-        // 
+        // 06. Write a function that extracts the content of a html page given as text. The function should return anything that is in a tag, without the tags
+
     </p>
 </body>
 </html>
