--- a/Javascript/07-Strings/07-ParseURL.html
+++ b/Javascript/07-Strings/07-ParseURL.html
@@ -22,7 +22,7 @@
     </header>
     <table>
         <tr>
-            <td>HTML:</td>
+            <td>URL:</td>
             <td><input type="text" value="http://www.d3bg.org/index.php?group=1&cat=0" id="input" /></td>
         </tr>
         <tr>
@@ -49,7 +49,13 @@
         }
     </script>
     <p style="font-size:12px;">
-        // 
+        // 07. Write a script that parses an URL address given in the format:<br />
+        [protocol]://[server]/[resource]<br />
+		and extracts from it the [protocol], [server] and [resource] elements. Return the elements in a JSON object.For example from the<br />
+        URL http://www.devbg.org/forum/index.php the following information should be extracted:<br /><br />
+        {protocol: "http",<br /> 
+        server: "www.devbg.org",<br /> 
+        resource: "/forum/index.php"}
     </p>
 </body>
 </html>
