--- a/Javascript/07-Strings/12-Templates.html
+++ b/Javascript/07-Strings/12-Templates.html
@@ -20,23 +20,51 @@
         <a href="11-StringFormat.html">11-StringFormat</a> |
         <a href="12-Templates.html" class="current">12-Templates</a>
     </header>
-    <table>
-        <tr>
-            <td></td>
-            <td><button onclick="onExecuteClick()">Execute</button></td>
-        </tr>
-    </table>
-    <div id="console">
+    <div data-type="template" id="list-item">
+        <strong>-{name}-</strong><span>-{age}-</span>
     </div>
-    <script src="js/js-console.js">	  
-    </script>
     <script>
-        function onExecuteClick() {
+        function generateHtmlList(items, template) {
+            var properties = [],
+                htmlOutput = [];
+            htmlOutput.push("<ul>");
 
+            for (var property in items) {
+                properties.push(property);
+            }
+
+            for (var i = 0; i < items.length; i++) {
+                htmlOutput.push("<li>");
+                var liContent = template;
+
+                for (var property in items[0]) {
+                    var regex = new RegExp('\\{' + property + '\\}', "gi");
+                    liContent = liContent.replace(regex, items[i][property]);
+                }
+
+                htmlOutput.push(liContent);
+                htmlOutput.push("</li>");
+            }
+            htmlOutput.push("</ul>");
+
+            return htmlOutput.join("");
         }
+
+        var people = [
+            { name: "Унуфри", age: 55 },
+            { name: "Мишо", age: 17 },
+            { name: "Серафим", age: 18 },
+            { name: "Лоренцо", age: 26 },
+            { name: "Трендафил", age: 32 },
+        ]
+
+        var divPeople = document.getElementById("list-item");
+        var template = divPeople.innerHTML;
+        var peopleList = generateHtmlList(people, template);
+        divPeople.innerHTML = peopleList;
     </script>
     <p style="font-size:12px;">
-        // 
+        // 12. Write a function that creates a HTML UL using a template for every HTML LI. The source of the list should an array of elements. Replace all placeholders marked with –{…}–   with the value of the corresponding property of the object
     </p>
 </body>
 </html>
