--- a/Javascript/07-Strings/08-BBCode.html
+++ b/Javascript/07-Strings/08-BBCode.html
@@ -23,6 +23,10 @@
     <table>
         <tr>
             <td></td>
+            <td>The html is hardcoded - check the source code</td>
+        </tr>
+        <tr>
+            <td></td>
             <td><button onclick="onExecuteClick()">Execute</button></td>
         </tr>
     </table>
@@ -32,11 +36,14 @@
     </script>
     <script>
         function onExecuteClick() {
-
+            var html = '<p>Please visit <a href="http://academy.telerik. com">our site</a> to choose a training course. Also visit <a href="www.devbg.org">our forum</a> to discuss the courses.</p>';
+            var regex = /<a href="(.*?)">(.*?)<\/a>/g;
+            var fixedHtml = html.replace(regex, '[URL=$1]$2[/URL]');
+            jsConsole.writeLine(fixedHtml);
         }
     </script>
     <p style="font-size:12px;">
-        // 
+        // 08. Write a JavaScript function that replaces in a HTML document given as string all the tags <a href="…">…</a> with corresponding tags [URL=…]…/URL]. Sample HTML fragment:
     </p>
 </body>
 </html>
