--- a/Javascript/07-Strings/09-ExtractEmail.html
+++ b/Javascript/07-Strings/09-ExtractEmail.html
@@ -32,11 +32,30 @@
     </script>
     <script>
         function onExecuteClick() {
+            var text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. \
+            Fusce viverra, erat nec volutpat convallis, lectus arcu interdum \
+            justo, in suscipit lacus dolor at ante. Quisque quis lacus arcu.\
+            Pellentesque Impad1945@superrito.com consectetur elementum sem Broure256@armyspy.com, sed vehicula sapien. Aliquam\
+            fermentum pellentesque urna at egestas. Morbi eu dui auctor, fermentum ZThaters32@rhyta.com\
+            nulla nec, posuere lacus. Curabitur nisl sem, semper eu vehicula ut,\
+            pharetra a nisl. Vestibulum RArly1960@gustr.com bibendum nisl in massa hendrerit, nec pharetra\
+            dui vehicula. Aread101@cuvox.de Nunc volutpat turpis vitae eros pharetra semper. Morbi\
+            vitae ante sed nisi consequat posuere. Dered1934@superrito.com Suspendisse consectetur posuere\
+            convallis. Ut vitae hendrerit sapien, eu hendrerit leo. In felis purus, QMances6060@einrot.com\
+            dictum et turpis ac, lacinia SDaunt1960@gustr.com suscipit purus. Duis id ipsum interdum,\
+            consequat quam non, ultrices mauris. Etiam tincidunt blandit tortor.";
+
+            var regex = /[a-zA-Z0-9]+@[a-zA-Z0-9]+\.[a-zA-Z]{2,4}/gi;
+            var matches = text.match(regex);
+            
+            for (var i = 0; i < matches.length; i++) {
+                jsConsole.writeLine(matches[i]);
+            }
 
         }
     </script>
     <p style="font-size:12px;">
-        // 
+        // 09. Write a function for extracting all email addresses from given text. All substrings that match the format &lt;identifier&gt;@&lt;host&gt;…&lt;domain&gt;<br /> should be recognized as emails. Return the emails as array of strings.
     </p>
 </body>
 </html>
