--- a/Javascript/08-DOMManipulation/08-DOMManipulation/01-RandomDivs.html
+++ b/Javascript/08-DOMManipulation/08-DOMManipulation/01-RandomDivs.html
@@ -2,7 +2,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <link href="css/js-console.css" rel="stylesheet" />
     <link href="css/style.css" rel="stylesheet" />
 </head>
 <body>
@@ -16,8 +15,7 @@
         </tr>
     </table>
     <div id="console"></div>
-    <script src="js/js-console.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/01-random-divs.js"></script>
     <p>
 // 01. Write a script that creates a number of div elements.
         <ul>
