--- a/Javascript/08-DOMManipulation/08-DOMManipulation/00-MathSinTests.html
+++ b/Javascript/08-DOMManipulation/08-DOMManipulation/00-MathSinTests.html
@@ -4,11 +4,13 @@
     <title></title>
     <link href="css/style.css" rel="stylesheet" />
     <style type="text/css">
-        .circle {
+        #circle {
             background:white;
-            width:1px;
-            height:1px;
+            width:20px;
+            height:20px;
             float:left;
+            position:absolute;
+            border-radius: 50%;
         }
         #console {
             float:left;
@@ -27,10 +29,11 @@
             <td><button onclick="onExecuteClick()">Execute</button></td>
         </tr>
     </table>
+    
     <div id="console">
-
+        <div id="circle"></div>
     </div>
-    <script src="js/02-circle-loop.js"></script>
+    <script src="js/00-math-sin-tests.js"></script>
     <div style="clear:both;">&nbsp;</div>
     <p>
     </p>
