--- a/Javascript/08-DOMManipulation/08-DOMManipulation/01-RandomDivs.html
+++ b/Javascript/08-DOMManipulation/08-DOMManipulation/01-RandomDivs.html
@@ -7,6 +7,7 @@
 <body>
     <header>
         <a href="01-RandomDivs.html" class="current" >01-RandomDivs</a> |
+        <a href="02-CircleMotion.html"  >02-CircleMotion</a> |
     </header>
     <table>
         <tr>
