--- a/Javascript/Snake/Snake/index.html
+++ b/Javascript/Snake/Snake/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <canvas id="canvas" width="450" height="450"></canvas>
+    <div>Резултат: <span id="score">0</span></div>
     <script src="js/snake.js"></script>
 </body>
 </html>
