--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -2,11 +2,11 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Popcorn Game</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="styles/style.css" type="text/css"/>
 </head>
 <body>
     <canvas id="canvas" width="411" height="350"></canvas>
     <div>Резултат: <span id="score">0</span></div>
-    <script src="js/popcorn.js"></script>
+    <script src="scripts/popcorn.js"></script>
 </body>
 </html>
