Add Require.js and add additional folder libraries.

--- a/Popcorn-Kinetic/index.html
+++ b/Popcorn-Kinetic/index.html
@@ -3,7 +3,8 @@
 <head>
     <title>Popcorn Game</title>
     <link rel="stylesheet" href="css/style.css" type="text/css"/>
-    <script src="js/kinetic-v5.1.0.min.js"></script>
+    <script src="libraries/require.min.js"></script>
+    <script src="libraries/kinetic-v5.1.0.min.js"></script>
 </head>
 <body>
     <div id="container"></div>
