--- a/Popcorn-Kinetic/index.html
+++ b/Popcorn-Kinetic/index.html
@@ -7,6 +7,7 @@
     <script src="libraries/kinetic-v5.1.0.min.js"></script>
 </head>
 <body>
+    <audio id="audiotag1" src="sounds/bum.wav" preload="auto"></audio>
     <div id="container"></div>
     <script src="js/popcorn-kinetic.js"></script>
 </body>
