Remove Require JS. We will need JavaScript OOP for proper use of this library.

--- a/Popcorn-Kinetic/index.html
+++ b/Popcorn-Kinetic/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="utf-8" />
     <title>Popcorn Game</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css"/>
-    <script src="libraries/require.min.js"></script>
-    <script src="libraries/kinetic-v5.1.0.min.js"></script>
+    <link rel="stylesheet" href="css/style.css" type="text/css" />
 </head>
 <body>
-    <audio id="audiotag1" src="sounds/bum.wav" preload="auto"></audio>
     <div id="container"></div>
+    <audio id="audiotag1" src="sounds/bum.wav" preload="auto"></audio>
+    <script src="libraries/kinetic-v5.1.0.min.js"></script>
     <script src="js/popcorn-kinetic.js"></script>
 </body>
 </html>
