Fixed minor bugs of the explosion effect

--- a/Popcorn-Kinetic/index.html
+++ b/Popcorn-Kinetic/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
@@ -7,6 +7,9 @@
 </head>
 <body>
     <div id="container"></div>
+    <!--<canvas id="explosion" width="500" height="350"></canvas>-->
+    <a href="#" id="start-btn">Start Game</a>
+    <a href="#" id="stop-btn">Stop Game</a>
     <audio id="audiotag1" src="sounds/bum.wav" preload="auto"></audio>
     <script src="libraries/kinetic-v5.1.0.min.js"></script>
     <script src="js/popcorn-kinetic.js"></script>
