Change some dirs, add buttons in index.html, remove .idea folder

--- a/Popcorn-Kinetic/index.html
+++ b/Popcorn-Kinetic/index.html
@@ -3,15 +3,14 @@
 <head>
     <meta charset="utf-8" />
     <title>Popcorn Game</title>
-    <link rel="stylesheet" href="css/style.css" type="text/css" />
+    <link rel="stylesheet" href="styles/index.css" type="text/css" />
 </head>
 <body>
     <div id="container"></div>
-    <!--<canvas id="explosion" width="500" height="350"></canvas>-->
-    <a href="#" id="start-btn">Start Game</a>
-    <a href="#" id="stop-btn">Stop Game</a>
+    <button id="start-btn">Start Game</button>
+    <button id="stop-btn">Stop Game</button>
     <audio id="audiotag1" src="sounds/bum.wav" preload="auto"></audio>
     <script src="libraries/kinetic-v5.1.0.min.js"></script>
-    <script src="js/popcorn-kinetic.js"></script>
+    <script src="scripts/popcorn.js"></script>
 </body>
 </html>
