--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+    <meta charset="utf-8" />
     <title>Popcorn Game</title>
-    <link rel="stylesheet" href="styles/style.css" type="text/css"/>
+    <link rel="stylesheet" href="styles/index.css" type="text/css" />
 </head>
 <body>
-    <canvas id="canvas" width="411" height="350"></canvas>
-    <div>Резултат: <span id="score">0</span></div>
+    <div id="container"></div>
+    <button id="start-btn">Start Game</button>
+    <button id="stop-btn">Stop Game</button>
+    <audio id="audiotag1" src="sounds/bum.wav" preload="auto"></audio>
+    <script src="libraries/kinetic-v5.1.0.min.js"></script>
+    <script src="scripts/globals.js"></script>
+    <script src="scripts/explosions.js"></script>
     <script src="scripts/popcorn.js"></script>
 </body>
 </html>
