Refactoring the code, added sound effects,
Attached gamelike-pong.wav when the ball deflects from the paddle.
Extract collision detection and soundEffects in separate files

--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -10,10 +10,13 @@
     <button id="start-btn">Start Game</button>
     <button id="pause-btn">Pause Game</button>
     <div id="wrapper"></div>
-    <audio id="audiotag1" src="sounds/bum.wav" preload="auto"></audio>
+    <audio id="explosionSound" src="sounds/bum.wav" preload="auto"></audio>
+    <audio id="paddleReflectionSound" src="sounds/gamelike-pong.wav" preload="auto">></audio>
     <script src="libraries/kinetic-v5.1.0.min.js"></script>
     <script src="scripts/globals.js"></script>
     <script src="scripts/bricks.js"></script>
+    <script src="scripts/collisionDetections.js"></script>
+    <script src="scripts/soundEffects.js"></script>
     <script src="scripts/explosions.js"></script>
     <script src="scripts/popcorn.js"></script>
 </body>
