--- a/Javascript/08-DOMManipulation/08-DOMManipulation/05-TreeView.html
+++ b/Javascript/08-DOMManipulation/08-DOMManipulation/05-TreeView.html
@@ -27,15 +27,46 @@
         <li>Item 5</li>
     </ul>
     <script>
-        var tree = document.getElementById('tree-view');
-        function walkTheDOM(node, func) {
-            func(node);
-            node = node.firstChild;
-            while (node) {
-                walkTheDOM(node, func);
-                node = node.nextSibling;
+        var list = document.getElementById('tree-view');
+
+        var allLiElements = document.getElementsByTagName('li');
+
+        for (var i = 0; i < allLiElements.length; i++) {
+
+            // Set all the display property of all child elements of LI - to NONE;
+            var child = allLiElements[i].firstElementChild;
+            while (child) {
+                child.style.display = 'none';
+                child = child.nextElementSibling;
             }
+
+            //Attach the onClick Event on all LI Elements
+            allLiElements[i].addEventListener('click', function (ev) {
+                ev.stopPropagation(); // !! Prevent Bubling
+                var currentChild = this.firstElementChild;
+                while (currentChild) {
+                    if (currentChild.style.display == 'none') {
+                        currentChild.style.display = 'block';
+                    } else {
+                        currentChild.style.display = 'none';
+                    }
+
+                    currentChild = currentChild.nextElementSibling;
+                }
+            }, false)
         }
+
+
+        //function walkTheDOM(node, func) {
+        //    func(node);
+        //    node = node.firstChild;
+        //    while (node) {
+        //        walkTheDOM(node, func);
+        //        node = node.nextSibling;
+        //    }
+        //}
+
+
     </script>
 </body>
 </html>
