Color Added to the gift Constant as Object

--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -16,6 +16,7 @@
     <script src="libraries/kinetic-v5.1.0.min.js"></script>
     <script src="scripts/globals.js"></script>
     <script src="scripts/bricks.js"></script>
+    <script src="scripts/gifts.js"></script>
     <script src="scripts/collisionDetections.js"></script>
     <script src="scripts/soundEffects.js"></script>
     <script src="scripts/explosions.js"></script>
