--- a/Javascript/15-Event-Model/index.html
+++ b/Javascript/15-Event-Model/index.html
@@ -41,6 +41,8 @@
             float:right;
             margin: 15px 10px 0 0px;
         }
+        span{ font-size: 10px;
+        color: gray;}
     </style>
 </head>
 <body>
@@ -48,6 +50,7 @@
 <ul style="border-top: 0;">
     <li><input type="text" autofocus/></li>
 </ul>
+<span>Press Enter to Submit</span>
 <script>
     var input = document.getElementsByTagName('input')[0];
     var container = document.getElementById('noteField')
