Adding game over SVG animation

--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -14,6 +14,7 @@
     <audio id="explosionSound" src="sounds/bum.wav" preload="auto"></audio>
     <audio id="paddleReflectionSound" src="sounds/gamelike-pong.wav" preload="auto">></audio>
     <script src="libraries/kinetic-v5.1.0.min.js"></script>
+    <script src="libraries/raphael-min.js"></script>
     <script src="scripts/globals.js"></script>
     <script src="scripts/bricks.js"></script>
     <script src="scripts/gifts.js"></script>
