--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <div id="container"></div>
+    <div id="svg-container"></div>
     <div id="wrapper">
         <button id="start-btn">Start Game</button>
         <button id="pause-btn">Pause Game</button>
@@ -22,5 +23,6 @@
     <script src="scripts/soundEffects.js"></script>
     <script src="scripts/explosions.js"></script>
     <script src="scripts/engine.js"></script>
+    <script src="scripts/gameOver.js"></script>
 </body>
 </html>
