SVG now is under the canvas.
It still needsa little adjusment on it

--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -6,8 +6,11 @@
     <link rel="stylesheet" href="styles/index.css" type="text/css" />
 </head>
 <body>
-    <div id="container"></div>
+<div id="game-container">
     <div id="svg-container"></div>
+    <div id="container"></div>
+</div>
+
     <div id="wrapper">
         <button id="start-btn">Start Game</button>
         <button id="pause-btn">Pause Game</button>
