--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -13,13 +13,17 @@
         <button id="start-btn">Start Game</button>
         <button id="pause-btn">Pause Game</button>
     </div>
+    <div id='score'>
+        High scores:
+        <div id="top10"></div>
+    </div>
 </div>
-
     <audio id="explosionSound" src="sounds/bum.wav" preload="auto"></audio>
     <audio id="paddleReflectionSound" src="sounds/gamelike-pong.wav" preload="auto">></audio>
     <script src="libraries/kinetic-v5.1.0.min.js"></script>
     <script src="libraries/raphael-min.js"></script>
     <script src="scripts/globals.js"></script>
+    <script src="scripts/updateScore.js"></script>
     <script src="scripts/bricks.js"></script>
     <script src="scripts/gifts.js"></script>
     <script src="scripts/collisionDetections.js"></script>
