Fixed stupid mistake in the title

--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="styles/index.css" type="text/css" />
 </head>
 <body>
-<h1>BRAKING BRICK</h1>
+<h1>BREAKING BRICK</h1>
 <div id="game-container">
     <div id="svg-container"></div>
     <div id="container"></div>
