--- a/Popcorn/index.html
+++ b/Popcorn/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
 <h1>BREAKING BRICK</h1>
+    <div id="liveScoreContainer">
+        <span>Your current is:</span>
+        <span id="liveScore"></span>
+    </div>
 <div id="game-container">
     <div id="svg-container"></div>
     <div id="container"></div>
