--- a/Javascript/19-EXAMPREP/task2/index.html
+++ b/Javascript/19-EXAMPREP/task2/index.html
@@ -29,17 +29,20 @@
 				<div class="tab-item-content">
 					<h1>Title 2</h1>
 				</div>
-			</div><div class="tab-item">
+			</div>
+            <div class="tab-item">
 				<strong class="tab-item-title">Title 3</strong>
 				<div class="tab-item-content">					
 					<h1>Title 3</h1>
 				</div>
-			</div><div class="tab-item">
+			</div>
+            <div class="tab-item">
 				<strong class="tab-item-title">Title 4</strong>
 				<div class="tab-item-content">					
 					<h1>Title 4</h1>
 				</div>
-			</div><div class="tab-item">
+			</div>
+            <div class="tab-item">
 				<strong class="tab-item-title">Title 5</strong>
 				<div class="tab-item-content">					
 					<h1>Title 5</h1>
