complete homework for advanced functions

--- a/Javascript/20-JS-OOP-Functions-and-function-Expressions/03-ConsoleModule.html
+++ b/Javascript/20-JS-OOP-Functions-and-function-Expressions/03-ConsoleModule.html
@@ -2,9 +2,14 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title></title>
+    <title>03 - Console Module</title>
+    <script src="scripts/console-module.js"></script>
 </head>
 <body>
-asd
+<script>
+    awesomeConsole.writeLine('{0}, is {1} {2}', 'Gosho', 'ninja', 'developer');
+    awesomeConsole.writeError('Error: THIS IS {0} {1} BAD ERROR', 'VERY', 'VERY');
+    awesomeConsole.writeWarn('Warning: {0} launch {1}!', 'nuclear', 'detected');
+</script>
 </body>
 </html>
