--- a/Javascript/22-JS-OOP-ModulesAndPatterns/01-OOP-Snake.html
+++ b/Javascript/22-JS-OOP-ModulesAndPatterns/01-OOP-Snake.html
@@ -3,24 +3,32 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>01 - OOP SNAKE</title>
+    <style>
+        canvas {
+            border: 1px solid #000;
+        }
+    </style>
 </head>
 <body>
-<canvas id="snake-canvas" width="500" height="500"></canvas>
+<canvas id="snake-canvas" width="515" height="515"></canvas>
 <script src="scripts/snake.js"></script>
 <script src="scripts/renderer.js"></script>
 <script src="scripts/detector.js"></script>
 <!--<script src="scripts/main.js"></script>-->
 <script>
-    var theSnake = snakes.get(250,250,5);
-    theSnake.snakeController();
-    var food = snakes.getFood(100,100,15);
+    var theSnake = snakes.get(0,0,2).snakeController();
+    var food = snakes.getFood(75,75,15);
 
     var renderer = renderers.getCanvas('#snake-canvas');
 
     function engine() {
         theSnake.move();
+        detector.WallCollision('#snake-canvas', theSnake);
         if(detector.isFoodCollision(theSnake, food)){
-            console.log('collision with food');
+            theSnake.extendSnake();
+            var x = (getRandomInt(15, 475/15)) * 15;
+            var y = (getRandomInt(15, 475/15)) * 15;
+            food.changePosition(x, y);
         }
         renderer.clear();
         renderer.draw(theSnake);
@@ -28,6 +36,14 @@
         setTimeout(engine, 100);
     }
     setTimeout(engine, 100);
+
+
+
+    // Helpers
+    function getRandomInt(min, max){
+        var randomInt = Math.floor(Math.random() * (max - min + 1)) + min;
+        return randomInt;
+    }
 </script>
 </body>
 </html>
